# factory-control-bot

./: .gitignore
artifacts/code/backend/: .env.example  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
artifacts/code/backend/alembic/: env.py
artifacts/code/backend/app/: config.py  main.py  worker.py
artifacts/code/backend/app/bot/: application.py  middleware.py
artifacts/code/backend/app/cli/: __init__.py  main.py
artifacts/code/backend/app/database/: __init__.py  engine.py  events.py  persistence.py  session.py
artifacts/code/backend/app/installer/: __init__.py  detector.py  runner.py
artifacts/code/backend/app/models/: __init__.py  analytics.py  api_usage.py  backup.py  base.py  deployment.py  factory_event.py  factory_run.py  model_benchmark.py  model_provider.py  node.py  orchestration_state.py  project.py  rate_limit.py  scheduled_task.py  self_research.py  setting.py  user.py
artifacts/code/backend/app/orchestrator/: __init__.py  audit_logger.py  information_barrier.py  quality_gate.py  state_machine.py
artifacts/code/backend/app/providers/: __init__.py  base.py  clink_adapter.py  fallback_chain.py  google_ai_adapter.py  litellm_adapter.py  rate_limiter.py  registry.py  sambanova_adapter.py
artifacts/code/backend/app/services/: __init__.py  analytics_service.py  backup_service.py  clink_router.py  cost_tracker.py  docker_service.py  factory_orchestrator.py  factory_runner.py  health_monitor.py  model_router.py  model_scanner.py  notification.py  project_service.py  provider_registry.py  run_monitor.py  self_researcher.py  settings_service.py  system_service.py  template_service.py  transcription.py  translation.py  user_service.py
artifacts/code/backend/scripts/: backup_db.sh
artifacts/code/backend/tests/: conftest.py
(+143 files in other folders)
